# ag-ui-workbench

./: .gitignore  README.md
backend/: .env.example  mcp_server.py  pyproject.toml  server.py  state_store.py
backend/agents/: chat_agent.py  dashboard_agent.py  plan_agent.py  stateful_agent.py  workflow_agent.py
backend/tools/: demo_tools.py  plan_tools.py
docs/: ag-ui-event-reference.md  mcp-apps-analysis.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: index.css
frontend/src/components/: App.tsx  ChartRenderer.tsx  ChatTab.tsx  DashboardGrid.tsx  EventInspector.tsx  FeatureToggles.tsx  MarkdownContent.tsx  McpAppViewer.tsx  PlanTab.tsx  SharedStateTab.tsx  TaskPlan.tsx  WorkbenchSettings.tsx  WorkflowTab.tsx
frontend/src/hooks/: useAgentStream.ts  useSharedState.ts
frontend/src/types/: ag-ui.ts
frontend/src/utils/: sse-client.ts
mcp/: sales_data.db  seed_database.py  server.py
mcp/ui/: dataset-explorer.html  interactive-chart.html  package-lock.json  package.json  statistics-dashboard.html  vite.config.ts
mcp/ui/src/: dataset-explorer.css  dataset-explorer.ts  interactive-chart.css  interactive-chart.ts  statistics-dashboard.css  statistics-dashboard.ts
